
  [ Daniel Holbach ]
  * bitesize:
    - display error message properly (LP: #785973).
    - error out if bug is already marked as 'bitesize'.
    - rephrase bug comment and subscribe person who adds the comment.
    - work-around LP:336866 and LP:254901.

  [ Stefano Rivera ]
  * mk-sbuild:
    - maintainer_name isn't mandatory any more (LP: #787051)

 -- Benjamin Drung <bdrung@debian.org>  Mon, 23 May 2011 23:38:51 +0200

ubuntu-dev-tools (0.123) unstable; urgency=low

  [ Stefano Rivera ]
  * mk-sbuild:
    - Disable daemons with a policy-rc.d script (like pbuilder does)
    - Move package installation after option parsing.
    - Exit 0 when showing help, and support -h.
    - Determine distribution from release name (via distro-info).
    - Reformat manpage.
    - Install qemu-user-static instead of qemu-kvm-extras-static.
    - Put schroot configuration in chroot.d/sbuild-$chroot (LP: #736808)
    - Understand Debian distribution synonyms, and store the chroot under the
      code name.
    - Support Debian experimental.

  [ Daniel Holbach ]
  * bitesize, doc/bitesize.1: add script to tag a bug as bitesize and add a
    comment that you are willing to help with fixing the bug.

  [ Benjamin Drung ]
  * sponsor-patch: Fix assertion error if a relative working directory
    is specified (LP: #785923).

 -- Benjamin Drung <bdrung@debian.org>  Fri, 20 May 2011 21:29:45 +0200

ubuntu-dev-tools (0.122) unstable; urgency=low

  [ Ted Gould ]
  * lp-project-upload: Add an optional parameter for creating a new
    milestone to add future bugs to.

  [ Benjamin Drung ]
  * data/ubuntu.csv: Update end-of-life dates.

  [ Brian Murray ]
  * grab-attachments: download the attachments to a folder named after the bug
    number e.g. bug-1

 -- Benjamin Drung <bdrung@debian.org>  Sat, 23 Apr 2011 13:52:01 +0200

ubuntu-dev-tools (0.121) unstable; urgency=low

  [ Daniel Holbach ]
  * harvest, setup.py: install tool that queries Harvest for information