@@ -24,11 +24,12 @@
 # This script is used to check if a package and all its build
 # dependencies are in main or not.
 
-import subprocess
 import sys
 
 import apt_pkg
 import apt
+
+from ubuntutools import subprocess
 
 def process_deps(cache, deps):
     """Takes a list of (build) dependencies and processes it."""
